-
Type:
Bug
-
Status: Resolved
-
Priority:
Blocker
-
Resolution: Fixed
-
Affects Version/s: 0.7.1
-
Fix Version/s: 0.8.0
-
Component/s: None
-
Labels:None
-
Target Version/s:
-
Code Review:
When a scanner receives ERROR_SERVER_TOO_BUSY from an overloaded TS, the CanBeRetried() function indicates that it is safe to retry. However, this ends up calling through to ReopenCurrentTablet() which rewinds back to the start of the tablet in the case that the scan wasn't marked as fault-tolerant.
In the case of a lot of concurrent TPCH Q6 queries via Impala, this ended up resulting in "never-ending" queries - each scanner was likely to hit the occasional TOO_BUSY error and start back at the beginning.
- relates to
-
KUDU-1079 Scanner not retrying on backpressure errors
-
- Resolved
-